--- a/infra/keepalived/config-cp1.yaml
+++ b/infra/keepalived/config-cp1.yaml
@@ -9,6 +9,14 @@ data:
       router_id LVS_KUBERNETES
     }
 
+    vrrp_script chk_apiserver {
+      script "/bin/sh -c 'curl -k -f https://localhost:6443/healthz || exit 1'"
+      interval 2
+      weight -2
+      fall 3
+      rise 2
+    }
+
     vrrp_instance VI_CONTROL_PLANE {
       state MASTER
       interface eno1
@@ -21,6 +29,9 @@ data:
       }
       virtual_ipaddress {
         10.0.20.10/24
+      }
+      track_script {
+        chk_apiserver
       }
     }
 
