Add health check script as ConfigMap and update keepalived to use mounted script

--- a/infra/keepalived/daemonset-cp2.yaml
+++ b/infra/keepalived/daemonset-cp2.yaml
@@ -52,6 +52,10 @@ spec:
           - name: config
             mountPath: /etc/keepalived/keepalived.conf
             subPath: keepalived.conf
+          - name: scripts
+            mountPath: /usr/local/bin/check_apiserver.sh
+            subPath: check_apiserver.sh
+            readOnly: true
         livenessProbe:
           exec:
             command: ["pgrep","keepalived"]
@@ -66,4 +70,8 @@ spec:
         - name: config
           configMap:
             name: keepalived-config-cp2
+        - name: scripts
+          configMap:
+            name: keepalived-scripts
+            defaultMode: 0755
 
