Revert "Add health check script as ConfigMap and update keepalived to use mounted script"
This reverts commit 76859c00859861f3d526f77076ea348fe8b8b83b.

--- a/infra/keepalived/config-cp1.yaml
+++ b/infra/keepalived/config-cp1.yaml
@@ -10,7 +10,7 @@ data:
     }
 
     vrrp_script chk_apiserver {
-      script "/usr/local/bin/check_apiserver.sh"
+      script "/bin/sh -c 'curl -k -f https://localhost:6443/healthz || exit 1'"
       interval 2
       weight -2
       fall 3
