Remove keepalived from git tracking and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ Thumbs.db
 /clusters/prod/apps/platform*.yaml
 /clusters/prod/apps/business/**
 /clusters/prod/apps/platform/**
+/infra/keepalived/
+/clusters/prod/infra/keepalived*.yaml
