Add ignoreDifferences for CRDs to prevent annotation size explosion in Calico ArgoCD Application

--- a/clusters/prod/infra/calico.yaml
+++ b/clusters/prod/infra/calico.yaml
@@ -18,6 +18,11 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: calico-system
+  ignoreDifferences:
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jqPathExpressions:
+        - .metadata.annotations     # prevents size explosion again
   syncPolicy:
     automated: null    # ❗ disables background auto-sync
     syncOptions:
