--- a/clusters/prod/infra/calico.yaml
+++ b/clusters/prod/infra/calico.yaml
@@ -5,16 +5,10 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  sources:
-    - repoURL: "https://docs.tigera.io/calico/charts"
-      chart: tigera-operator
-      targetRevision: v3.28.1
-      helm:
-        valueFiles:
-          - $values/infra/calico/values.yaml
-    - repoURL: https://github.com/Murtadah-1984/k8sgitops.git
-      targetRevision: main
-      ref: values
+  source:
+    repoURL: https://github.com/Murtadah-1984/k8sgitops.git
+    targetRevision: main
+    path: infra/calico
   destination:
     server: https://kubernetes.default.svc
     namespace: calico-system
