--- a/infra/calico/felix.yaml
+++ b/infra/calico/felix.yaml
@@ -3,22 +3,14 @@ kind: FelixConfiguration
 metadata:
   name: default
 spec:
-  # IPIP/VXLAN settings (from live manifest)
-  ipipEnabled: true
-  vxlanEnabled: false
-  
-  # IPv6 support (disabled)
-  ipv6Support: false
-  
-  # Endpoint to host action
-  defaultEndpointToHostAction: Accept
-  
-  # Health checks
-  healthEnabled: true
-  
-  # Logging (disabled for kubectl logs)
-  logSeverityFile: Info
-  logSeverityScreen: Info
-  logSeveritySys: Info
-  disableFileLogging: true
-
+  logSeverityScreen: Info        # valid
+  reportingInterval: 0s          # valid, disable usage reporting
+  failsafeOutboundHostPorts:
+    - protocol: TCP
+      port: 22
+    - protocol: TCP
+      port: 179
+    - protocol: UDP
+      port: 53
+    - protocol: TCP
+      port: 5473
