--- a/clusters/prod/infra/calico.yaml
+++ b/clusters/prod/infra/calico.yaml
@@ -16,6 +16,14 @@ spec:
     server: https://kubernetes.default.svc
     namespace: calico-system
   ignoreDifferences:
+    - kind: Deployment
+      namespace: calico-system
+    - kind: DaemonSet
+      namespace: calico-system
+    - kind: ServiceAccount
+      namespace: calico-system
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
       jqPathExpressions:
