--- a/clusters/prod/infra/calico.yaml
+++ b/clusters/prod/infra/calico.yaml
@@ -18,11 +18,11 @@ spec:
     namespace: calico-system
   ignoreDifferences:
     - kind: Deployment
-      namespace: calico-system
+      namespace: kube-system
     - kind: DaemonSet
-      namespace: calico-system
+      namespace: kube-system
     - kind: ServiceAccount
-      namespace: calico-system
+      namespace: kube-system
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
     - group: operator.tigera.io
