--- a/clusters/prod/infra/calico.yaml
+++ b/clusters/prod/infra/calico.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/Murtadah-1984/k8sgitops.git
-    targetRevision: main
+      targetRevision: main
     path: infra/calico               # folder containing ippool.yaml, installation.yaml, felix.yaml
     directory:
       recurse: true
@@ -18,11 +18,11 @@ spec:
     namespace: calico-system
   ignoreDifferences:
     - kind: Deployment
-      namespace: kube-system
+      namespace: calico-system
     - kind: DaemonSet
-      namespace: kube-system
+      namespace: calico-system
     - kind: ServiceAccount
-      namespace: kube-system
+      namespace: calico-system
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
     - group: operator.tigera.io
