Rename services-pool to lb-pool, update references, and update Calico configuration

--- a/infra/calico/installation.yaml
+++ b/infra/calico/installation.yaml
@@ -6,15 +6,8 @@ metadata:
 spec:
   variant: Calico
   calicoNetwork:
-    bgp: Enabled
-    ipPools:
-      - cidr: 192.168.0.0/16
-        encapsulation: IPIP
-        natOutgoing: Enabled
-        nodeSelector: "node-role.kubernetes.io/control-plane!=true"  # workers only
-    # autodetect IP from host interfaces (correct position)
-    nodeAddressAutodetectionV4:
-      firstFound: true
+    bgp: Disabled
+     
   cni:
     type: Calico
     ipam:
