--- a/infra/metallb/lb-pool.yaml
+++ b/infra/metallb/lb-pool.yaml
@@ -1,10 +1,10 @@
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: services-pool
+  name: lb-pool
   namespace: metallb-system
 spec:
   addresses:
-    - 10.0.20.10-10.0.20.20   # or larger range
+    - 10.0.20.10-10.0.20.10   # or larger range
   autoAssign: true
 
