--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ Thumbs.db
 # Ignore everything except Ceph
 *
 !.gitignore
-!**/ceph/
+!infra/ceph/
+!infra/ceph/**
 !**/ceph*.yaml
 !clusters/**/ceph*.yaml
 
