--- a/clusters/prod/argocd-root.yaml
+++ b/clusters/prod/argocd-root.yaml
@@ -13,6 +13,8 @@ spec:
     path: clusters/prod
     repoURL: https://github.com/Murtadah-1984/k8sgitops.git
     targetRevision: main
+    directory:
+      recurse: true
   sources: []
   project: default
   syncPolicy:
