Update CephFS storageClass parameters with clusterID, fsName, pool, and ext4 fstype

--- a/infra/ceph/rook-ceph-cluster/values.yaml
+++ b/infra/ceph/rook-ceph-cluster/values.yaml
@@ -144,7 +144,11 @@ cephFilesystems:
       reclaimPolicy: Delete
       allowVolumeExpansion: true
       volumeBindingMode: Immediate
-      parameters: {}
+      parameters:
+        clusterID: rook-ceph
+        fsName: myfs
+        pool: myfs-data0
+        csi.storage.k8s.io/fstype: ext4
 
 toolbox:
   enabled: true
