Add ignoreDifferences rule for CephFilesystem dataPools in ArgoCD

--- a/clusters/prod/infra/ceph-cluster.yaml
+++ b/clusters/prod/infra/ceph-cluster.yaml
@@ -15,6 +15,11 @@ spec:
   destination:
     namespace: rook-ceph
     server: https://kubernetes.default.svc
+  ignoreDifferences:
+    - group: ceph.rook.io
+      kind: CephFilesystem
+      jsonPointers:
+        - /spec/dataPools
   syncPolicy:
     automated:
       selfHeal: true
