Update Vault repo URL to OCI registry

--- a/clusters/prod/infra/vault.yaml
+++ b/clusters/prod/infra/vault.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   project: default
   sources:
-    - repoURL: "https://charts.bitnami.com/bitnami"
-      chart: bitnami/vault
+    - repoURL: "oci://registry-1.docker.io/bitnamicharts"
+      chart: vault
       targetRevision: "1.9.0"
       helm:
         valueFiles:
