Update gitignore to ignore clusters/prod/infra/vault directory

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ Thumbs.db
 # Explicitly ignore calico.yaml
 /clusters/prod/infra/calico.yaml
 
-# Explicitly ignore vault.yaml
-/clusters/prod/infra/vault.yaml
+# Explicitly ignore vault directory
+/clusters/prod/infra/vault
