--- a/clusters/prod/infra/vault.yaml
+++ b/clusters/prod/infra/vault.yaml
@@ -10,6 +10,8 @@ spec:
       chart: vault
       targetRevision: "1.9.0"
       helm:
+        auth:
+          sensitive: false
         valueFiles:
           - $values/infra/vault/values.yaml
     - repoURL: https://github.com/Murtadah-1984/k8sgitops.git
