--- a/infra/mysql-operator/values.yaml
+++ b/infra/mysql-operator/values.yaml
@@ -3,3 +3,45 @@
 
 # Add operator-specific configuration here
 
+image:
+  pullPolicy: IfNotPresent
+
+# Recommended runtime resources for production
+resources:
+  requests:
+    cpu: 200m
+    memory: 512Mi
+  limits:
+    cpu: 1
+    memory: 1Gi
+
+# Webhook & controller high reliability
+controller:
+  replicas: 2
+  resources:
+    requests:
+      cpu: 300m
+      memory: 600Mi
+    limits:
+      cpu: 1
+      memory: 1Gi
+
+webhook:
+  enabled: true
+  resources:
+    requests:
+      cpu: 100m
+      memory: 300Mi
+    limits:
+      cpu: 300m
+      memory: 600Mi
+
+# TLS built-in (recommended)
+tls:
+  enabled: true
+
+# spread operator pods across nodes
+affinity:
+  podAntiAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      - topologyKey: kubernetes.io/hostname
